# soul-forge

./: .gitignore  CONTRIBUTING.md  README.ja.md  README.md  README.zh-cn.md  README.zh-tw.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  new-template.md
.github/workflows/: ci.yml  publish.yml
docs/launch/: hackernews-post.md  reddit-post.md
docs/superpowers/plans/: 2026-03-30-community-growth-plan.md  2026-03-30-soul-forge-plan.md
docs/superpowers/specs/: 2026-03-30-community-growth-design.md  2026-03-30-soul-forge-design.md
examples/fullstack-team/: README.md
examples/fullstack-team/agents/: kakashi-reviewer.md  naruto-backend.md  sakura-frontend.md
examples/language-tutors/: README.md
examples/language-tutors/agents/: dio-teacher.md  jotaro-sensei.md
src/soul_forge/: cli.py  cli_template.py  installer.py  managed_block.py  orchestration.py  platforms.py
src/soul_forge/templates/agents/: backend-developer.md  code-reviewer.md  devops-engineer.md  english-teacher.md  frontend-developer.md  japanese-teacher.md  qa-engineer.md  system-architect.md
src/soul_forge/templates/commands/: sf-anoint.md  sf-banish.md  sf-bind.md  sf-engrave.md  sf-fuse.md  sf-party.md  sf-summon.md
tests/: conftest.py  test_cli.py  test_cli_template.py  test_installer.py  test_integration.py  test_managed_block.py  test_orchestration.py  test_platforms.py
