[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soul-forge"
version = "0.1.0"
description = "RPG-style character creation system for AI agents"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.scripts]
soul-forge = "soul_forge.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
