[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentsoulforge"
version = "0.1.0"
description = "RPG-style character creation system for AI agents"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "anrylu" },
]
keywords = ["ai", "agent", "rpg", "cli", "claude", "gemini", "copilot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/anrylu/soul-forge"
Repository = "https://github.com/anrylu/soul-forge"
Issues = "https://github.com/anrylu/soul-forge/issues"

[project.scripts]
soul-forge = "soul_forge.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
